tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__FarmLogic-AAAAAAAAAAAAAAAAAAACRw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 583,
  "prerequisites": [
    584
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This chip allows you to select the farm type (when combined with the right electron tubes), and not use the default of growing trees. Unless that's what you want, in which case you don't need it.\n\nFor each circuit tier, you can configure 1/4 more of your farm.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Farm Logic",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    584
  ],
  "rewards": [],
  "tasks": []
}
