tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__FindingApatite-AAAAAAAAAAAAAAAAAAACTA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 588,
  "prerequisites": [
    580
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's now time to search for some ores. Apatite is the most important material in Forestry. You can make fertilizer, farm blocks and other things with it. The vein is found between Y 40-60.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Finding Apatite",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    580
  ],
  "rewards": [],
  "tasks": []
}
