tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__ForestryCoreBloc-X54R4jrtQu2rI9j4eHC7lw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 4246123611375582103,
  "prerequisites": [
    577
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The upgraded casing for Forestry, used in multiple recipes for endgame Gendustry items and the Rainmaker. ",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Forestry Core Block #2",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    577
  ],
  "rewards": [],
  "tasks": []
}
