tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__Forestrycorebloc-AAAAAAAAAAAAAAAAAAACQQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 577,
  "prerequisites": [
    576,
    73
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This sturdy casing is the basis for almost all machines in Forestry, essentially being the Forestry equivalent of a machine casing.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Forestry Core Block",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    576,
    73
  ],
  "rewards": [],
  "tasks": []
}
