tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__GiantSequoia-AAAAAAAAAAAAAAAAAAALMQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2865,
  "prerequisites": [
    2864,
    2862
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can get Giant Sequoia by combining Coast Sequoia and Grandidier's Baobab.\n\n§dBoth Height and §bGirth, Get!§r\n\n[note]PS: If this doesn't work (NEI says yes, internet says no) you should also be able to trade a forestry villager for it.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Giant Sequoia",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2864,
    2862
  ],
  "rewards": [],
  "tasks": []
}
