tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__GoldenRaspberry-AAAAAAAAAAAAAAAAAAALOQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2873,
  "prerequisites": [
    2869,
    2872
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can get Golden Raspberry by combining Raspberry and Orange.\n\n[warn]Fastest Maturity Get![/warn]\n\n[note]That probably took forever, huh? BTW, it probably would've been faster to make more multifarms or farming stations instead.[/note]\n\n[note]Also, you still gotta create the ultimate hybrid, too.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Golden Raspberry",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2869,
    2872
  ],
  "rewards": [],
  "tasks": []
}
