tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__GrandidiersBaoba-AAAAAAAAAAAAAAAAAAALMA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2864,
  "prerequisites": [
    2863
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can get Grandidier's Baobab by combining Wenge and Balsa.\n\n§eAbility to grow trees on sand, Get! Like you care.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Grandidier's Baobab",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2863
  ],
  "rewards": [],
  "tasks": []
}
