tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__HeatingCoils-AAAAAAAAAAAAAAAAAAACSQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 585,
  "prerequisites": [
    577
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your thermionic fabricator needs heating coils to function. So combine some magnetized (requires polarizer) steel rods with some copper wire and make some.\n\n[note]Why is this a separate quest again?[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Heating Coils",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    577
  ],
  "rewards": [],
  "tasks": []
}
