tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__ForestryandMulti-AAAAAAAAAAAAAAAAAAAAEg==__IntricateFarmLog-AAAAAAAAAAAAAAAAAAACUw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 595,
  "prerequisites": [
    584
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This circuit allows you to configure 4/4 areas of your farm. Honestly, you should probably just skip the others.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Intricate Farm Logic",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    584
  ],
  "rewards": [],
  "tasks": []
}
